--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/images/favicon.ico" />
+    <link rel="icon" href="./assets/images/favicon.ico" />
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
         <nav>
           <div>
             <a href="index.html"
-              ><img class="logo-header" src="assets/images/Logo.png" alt="logo"
+              ><img class="logo-header" src="./assets/images/Logo.png" alt="logo"
             /></a>
           </div>
           <div class="nav-text">
@@ -112,7 +112,7 @@
                   <div class="product-otm-1">
                     <img
                       class="potm-pic"
-                      src="assets/images/Jojobaoil.-bearbeitetpsd.png"
+                      src="./assets/images/Jojobaoil.-bearbeitetpsd.png"
                       alt="Jojoba Haaröl"
                     />
                   </div>
@@ -159,17 +159,17 @@
               <button class="prev" onclick="prevSlide()">&#10094;</button>
               <img
                 class="index-pic"
-                src="assets/images/Rosemaryoil-bearbeitet.png"
+                src="./assets/images/Rosemaryoil-bearbeitet.png"
                 alt="Produkt 1"
               />
               <img
                 class="index-pic"
-                src="assets/images/Arganoil-bearbeitet.png"
+                src="./assets/images/Arganoil-bearbeitet.png"
                 alt="Produkt 2"
               />
               <img
                 class="index-pic"
-                src="assets/images/Hairspray-bearbeitet.png"
+                src="./assets/images/Hairspray-bearbeitet.png"
                 alt="Produkt 3"
               />
               <button class="next" onclick="nextSlide()">&#10095;</button>
@@ -183,42 +183,42 @@
               <div class="brand-logo-container">
                 <div class="brand-logo-slider">
                   <img
-                    src="assets/images/wella_logo.png"
+                    src="./assets/images/wella_logo.png"
                     alt="Wella Logo"
                     class="brand-logo"
                   />
                   <img
-                    src="assets/images/schwarzkopf_logo.png"
+                    src="./assets/images/schwarzkopf_logo.png"
                     alt="Schwarzkopf Logo"
                     class="brand-logo"
                   />
                   <img
-                    src="assets/images/Kerastase-Logo.png"
+                    src="./assets/images/Kerastase-Logo.png"
                     alt="Kerastase Logo"
                     class="brand-logo"
                   />
                   <img
-                    src="assets/images/got2b_logo.png"
+                    src="./assets/images/got2b_logo.png"
                     alt="got2b Logo"
                     class="brand-logo"
                   />
                   <img
-                    src="assets/images/wella_logo.png"
+                    src="./assets/images/wella_logo.png"
                     alt="Wella Logo"
                     class="brand-logo"
                   />
                   <img
-                    src="assets/images/schwarzkopf_logo.png"
+                    src="./assets/images/schwarzkopf_logo.png"
                     alt="Schwarzkopf Logo"
                     class="brand-logo"
                   />
                   <img
-                    src="assets/images/Kerastase-Logo.png"
+                    src="./assets/images/Kerastase-Logo.png"
                     alt="Kerastase Logo"
                     class="brand-logo"
                   />
                   <img
-                    src="assets/images/got2b_logo.png"
+                    src="./assets/images/got2b_logo.png"
                     alt="got2b Logo"
                     class="brand-logo"
                   />
@@ -232,14 +232,14 @@
     <footer>
       <div class="footer_content">
         <div class="footer-items">
-          <img class="logo-footer" src="assets/images/Logo.png" alt="Logo" />
+          <img class="logo-footer" src="./assets/images/Logo.png" alt="Logo" />
           <div class="sm-icons">
             <a
               href="https://www.instagram.com/explore/tags/haircare/"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/instagram2.png"
+                src="./assets/images/instagram.png"
                 alt="instagram"
             /></a>
             <a
@@ -247,7 +247,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/tiktok.png"
+                src="./assets/images/tiktok.png"
                 alt="TikTok"
             /></a>
             <a
@@ -255,7 +255,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/facebook.png"
+                src="./assets/images/facebook.png"
                 alt="facebook"
             /></a>
             <a
@@ -263,7 +263,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/linkedin.png"
+                src="./assets/images/linkedin.png"
                 alt="linkedin"
             /></a>
           </div>
@@ -299,6 +299,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
