--- a/shop.html
+++ b/shop.html
@@ -7,15 +7,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/images/favicon.ico" />
+    <link rel="icon" href="./assets/images/favicon.ico" />
   </head>
   <body>
     <header>
@@ -25,7 +25,7 @@
             <a href="index.html">
               <img
                 class="logo-header"
-                src="assets/images/Logo.png"
+                src="./assets/images/Logo.png"
                 alt="logo"
               />
             </a>
@@ -59,10 +59,10 @@
             <h3>KATEGORIEN</h3>
           </div>
           <div class="content-items categories">
-            <a href="/shopsites/repair_and_care.html"
+            <a href="./shopsites/repair_and_care.html"
               ><div>
                 <img
-                  src="assets/images/startbild-repair-and-care.png"
+                  src="./assets/images/startbild-repair-and-care.png"
                   alt="Repair and Care"
                   class="category-img"
                 />
@@ -72,7 +72,7 @@
             <a href="shopsites/oiling.html">
               <div>
                 <img
-                  src="assets/images/oiling-startbild.png"
+                  src="./assets/images/oiling-startbild.png"
                   alt="Hair Oiling"
                   class="category-img"
                 />
@@ -86,7 +86,7 @@
             <div class="content-items categories">
               <div>
                 <img
-                  src="assets/images/styling-startbild.png"
+                  src="./assets/images/styling-startbild.png"
                   alt="Styling"
                   class="category-img"
                 />
@@ -94,7 +94,7 @@
               </div>
               <div>
                 <img
-                  src="assets/images/startbild-coloring.png"
+                  src="./assets/images/startbild-coloring.png"
                   alt="Colouring"
                   class="category-img"
                 />
@@ -108,14 +108,14 @@
     <footer>
       <div class="footer_content">
         <div class="footer-items">
-          <img class="logo-footer" src="assets/images/Logo.png" alt="Logo" />
+          <img class="logo-footer" src="./assets/images/Logo.png" alt="Logo" />
           <div class="sm-icons">
             <a
               href="https://www.instagram.com/explore/tags/haircare/"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/instagram2.png"
+                src="./assets/images/instagram.png"
                 alt="instagram"
             /></a>
             <a
@@ -123,7 +123,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/tiktok.png"
+                src="./assets/images/tiktok.png"
                 alt="TikTok"
             /></a>
             <a
@@ -131,7 +131,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/facebook.png"
+                src="./assets/images/facebook.png"
                 alt="facebook"
             /></a>
             <a
@@ -139,7 +139,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/linkedin.png"
+                src="./assets/images/linkedin.png"
                 alt="linkedin"
             /></a>
           </div>
