update unterseiten link footer

--- a/about_us.html
+++ b/about_us.html
@@ -203,10 +203,10 @@
         </div>
         <div class="footer-items">
           <h4><strong>Produkte</strong></h4>
-          <p>Repair & Care</p>
-          <p>Hair Oiling</p>
-          <p>Styling</p>
-          <p>Coloring</p>
+          <a href="./shopsites/repair_and_care.html"><p class="link-category">Repair & Care</p></a>
+          <a href="./shopsites/oiling.html"><p class="link-category">Hair Oiling</p></a>
+          <a href=""><p class="link-category">Styling</p></a>
+          <a href=""><p class="link-category">Coloring</p></a>
         </div>
         <div class="footer-items">
           <h4><strong>Rechtliches</strong></h4>
