--- a/game.html
+++ b/game.html
@@ -96,8 +96,8 @@
     </div>
     <footer>
       <div class="footer_content">
-        <div>
-          <img class="logo-footer" src="./assets/images/Logo.png" alt="Logo">
+        <div class="footer-items">
+          <img class="logo-footer" src="./assets/images/Logo.png" alt="Logo" />
           <div class="sm-icons">
             <a
               href="https://www.instagram.com/explore/tags/haircare/"
@@ -105,48 +105,51 @@
               ><img
                 class="socialmedia"
                 src="./assets/images/instagram.png"
-                alt="instagram"></a>
+                alt="instagram"
+            /></a>
             <a
               href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
               target="_blank"
               ><img
                 class="socialmedia"
                 src="./assets/images/tiktok.png"
-                alt="TikTok"></a>
+                alt="TikTok"
+            /></a>
             <a
               href="https://www.facebook.com/haircareangels/?locale=de_DE"
               target="_blank"
               ><img
                 class="socialmedia"
                 src="./assets/images/facebook.png"
-                alt="facebook">
-            </a>
+                alt="facebook"
+            /></a>
             <a
               href="https://www.linkedin.com/company/haircaregroup/?originalSubdomain=de"
               target="_blank"
               ><img
                 class="socialmedia"
                 src="./assets/images/linkedin.png"
-                alt="linkedin"></a>
+                alt="linkedin"
+            /></a>
           </div>
         </div>
-        <div>
+        <div class="footer-items">
           <h4><strong>Kontakt</strong></h4>
           <p>Zweifel Kira, Moll Sofia, Janine Studhalter</p>
           <p>Musterstrasse 99</p>
           <p>9999 Musterhausen</p>
-          <br>
+          <br />
           <p>+41 79 200 20 20</p>
           <p>muster@gmail.com</p>
         </div>
-        <div>
+        <div class="footer-items">
           <h4><strong>Produkte</strong></h4>
-          <p>Repair & Care</p>
-          <p>Hair Oiling</p>
-          <p>Styling</p>
-          <p>Coloring</p>
+          <a href="./shopsites/repair_and_care.html"><p class="link-category">Repair & Care</p></a>
+          <a href="./shopsites/oiling.html"><p class="link-category">Hair Oiling</p></a>
+          <a href=""><p class="link-category">Styling</p></a>
+          <a href=""><p class="link-category">Coloring</p></a>
         </div>
-        <div>
+        <div class="footer-items">
           <h4><strong>Rechtliches</strong></h4>
           <a class="norm-links" href="https://www.haar-shop.ch/de/impressum"
             ><p>Impressum</p></a
