update wegen favicon

--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <title>RehabilitHair – Gewinnspiel</title>
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/game.css">
-    <link rel="icon" href="./assets/images/favicon.ico">
+    <link rel="icon" href="../assets/images/favicon.ico">
   </head>
 
   <body>
