--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./assets/images/favicon.ico" />
+    <link rel="icon" href="../assets/images/favicon.ico" />
   </head>
   <body>
     <header>
